# GCCWebProject

./: .gitignore  README.md  app.py  forms.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  server_hosting.sqlite3  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docker/: mcdocker.py
mc_lib/: mcdocker.py  test_mcdocker.py
models/: models.py
src/: app.py  forms.py  models.py
src/mc_lib/: mcdocker.py
src/static/scripts/: createServer.js  home.js  scripts.js  tags.js
src/static/styles/: style.css
src/templates/: account.html  flash.html  home.html  home_old.html  login.html  new_server.html  new_server_tag.html  register.html  root.html  server.html  server_creation.html  server_list.html  terminal.html  user_server.html  users_servers.html
src/tests/: conftest.py  test_app.py  test_mcdocker.py
static/scripts/: account.js  home.js  scripts.js
templates/: account.html  home.html  index.html  login.html  new_server.html  register.html  root.html  server.html  server_list.html  terminal.html  update_server.html  user-server.html  user_server.html
