[metadata]
name = mcdocker
version = 0.0.1
author = Collin Campbell 

[options]
packages =
    mc_lib
package_dir = 
    =src
python_requires = 
    >=3.9
install_requires = 
    docker
    configparser

[options.extras_require]
testing = 
    pytest
    tox

[options.package_data]
mc_lib = py.typed



